--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 h1{
     text-align: center;
-    padding: 2em 0;
+    padding: 4em 0;
+}
+
+body{
+    background-color: rgb(37, 37, 37) !important;
+    color: white !important;
 }
 
 .login-form{
@@ -9,6 +14,84 @@ h1{
     border: 0.2em solid grey;
 }
 
-.nav-item button{
-    padding: 1em 1.5em;
+nav ul{
+    background-color: rgb(37, 37, 37);
+    
+}
+
+.border-nav{
+    background-image:linear-gradient(135deg, #008aff, #86d472);
+    padding: 2px 0;
+    width: 100%;
+}
+
+.nav a {
+    text-decoration: none !important;
+}
+
+.nav a{
+    border: none;
+    
+    background-color: rgb(37, 37, 37);
+    height: 50px;
+    font-size: 1.4em;
+    font-weight: 600;
+    text-decoration: none;
+    z-index: 2;
+    max-width: 12em;
+}
+.nav-item {
+    margin: 0 2em;
+}
+
+
+.nav-link {
+    background-color: rgba(255, 222, 173, 0);
+    border: none;
+    text-align: center;
+}
+
+.nav a:hover {
+    color: #fff;
+    background-image: linear-gradient(135deg, #008aff, #86d472);
+    
+}
+
+.welcome{
+    height: 40vh;
+}
+
+.swiper {
+    width: 100%;
+    height: 60vh;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: rgba(255, 222, 173, 0);
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-pagination-bullet {
+    background-color: rgb(255, 255, 255) !important;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: rgb(71, 255, 209) !important;
 }
