--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@ h1{
 body{
     background-color: rgb(37, 37, 37) !important;
     color: white !important;
+    font-family: 'Quicksand', sans-serif !important;
 }
 
 .login-form{
@@ -57,7 +58,7 @@ nav ul{
     
 }
 
-.welcome{
+.allEvents{
     height: 40vh;
 }
 
@@ -95,3 +96,40 @@ nav ul{
 .swiper-pagination-bullet-active {
     background-color: rgb(71, 255, 209) !important;
 }
+
+.downIcon {
+
+    transform: rotate(-90deg); /* Equal to rotateZ(45deg) */
+}
+
+.btn-blue {
+    background-image: linear-gradient(135deg, #008aff, #86d472);
+    border-radius: 6px;
+    color: #ffffff;
+    height: 50px;
+    font-size: 1em;
+    padding: 3px;
+    text-decoration: none;
+    width: 7em;
+    z-index: 2;
+    align-items: center;
+  }
+  
+  .btn-blue:hover {
+    color: #fff;
+  }
+  
+  .btn-blue-span {
+    align-items: center;
+    background: rgb(20, 20, 20);
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    transition: background 0.5s ease;
+    width: 100%;
+  }
+  
+  .btn-blue:hover .btn-blue-span {
+    background: transparent;
+  }
