--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,12 +61,29 @@ nav ul{
 .hero{
     height: 30vh;
 }
-
+.createEvents {
+    width: 60%;
+    align-items:center;
+}
 .swiper, .content {
     width: 100%;
-    height: 65vh;
+    height: 670px;
     margin-left: auto;
     margin-right: auto;
+    background: rgb(37, 37, 37)!important;
+    color: white!important;
+  }
+  .ui-widget-content {
+    border: none !important;
+    
+  }
+
+  #tabs, #tabs2 {
+      border: 1px solid rgb(153, 153, 153) !important;
+  }
+  .ui-widget-header{
+    background: rgb(37, 37, 37)!important;
+    border: none !important;
   }
 
   .swiper-slide {
